fixed p tag overflow

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -101,6 +101,11 @@ button {
   text-transform: capitalize;
 }
 
+.info-job-description {
+  word-break: break-all;
+  white-space: normal;
+}
+
 .container-email-phone {
   display: flex;
   justify-content: space-around;
